--- a/ChamadaApplication/res/layout/disciplinas_cadastradas_layout.xml
+++ b/ChamadaApplication/res/layout/disciplinas_cadastradas_layout.xml
@@ -4,15 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <Button android:id="@+id/addDisciplinaButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/addDisciplinaButton"/>
-    
-    <ListView android:id="@+id/disciplinasCadastradasListView"
+    <ListView
+        android:id="@+id/disciplinasCadastradasListView"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>    
-    
+        android:layout_height="wrap_content" />
+
+    <FrameLayout       
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
