Com Seleção de data.

--- a/ChamadaApplication/res/layout/cadastrar_disciplina_layout.xml
+++ b/ChamadaApplication/res/layout/cadastrar_disciplina_layout.xml
@@ -89,4 +89,9 @@
             android:dividerHeight="10sp" />
     </RelativeLayout>
 
+     <FrameLayout       
+        android:id="@+id/fragmentContainerHorario"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    
 </LinearLayout>
