--- a/ChamadaApplication/res/menu/cadastrar_disciplina_menu.xml
+++ b/ChamadaApplication/res/menu/cadastrar_disciplina_menu.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    
-    <item android:id="@+id/adicionarNovaDisciplinaIcon"
-        android:icon="@drawable/ic_action_new"
+
+    <item
+        android:id="@+id/confirmarDisciplina"
+        android:icon="@drawable/ic_action_accept"
+        android:title="Confirmar"
         android:showAsAction="always"/>
 
 </menu>
