Mudança de telas.

--- a/ChamadaApplication/res/layout/dia_semana_layout.xml
+++ b/ChamadaApplication/res/layout/dia_semana_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"    
+    android:layout_height="match_parent"
     android:orientation="horizontal" >
 
     <CheckBox
@@ -14,7 +14,20 @@
     <TextView
         android:id="@+id/textoCheckBox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:layout_marginLeft="10sp"/>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp" />
+
+    <TextView android:id="@+id/horaInicioId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:text="@string/hora_inicio" />
+    
+    <TextView
+        android:id="@+id/horaFimId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:text="@string/hora_fim" />
 
 </LinearLayout>
