--- a/ChamadaApplication/res/layout/disciplinas_cadastradas_frame_container.xml
+++ b/ChamadaApplication/res/layout/disciplinas_cadastradas_frame_container.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ListView
-        android:id="@+id/disciplinasCadastradasListView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
+    <FrameLayout       
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    
 </LinearLayout>
